--- a/asset/style.css
+++ b/asset/style.css
@@ -1,34 +1,33 @@
-body{
+body {
     box-sizing: border-box;
     margin: 0;
-    font-family:'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     position: relative;
 }
 
-.border{
+.border {
     border: 1px solid #ccc;
     border-radius: 8px;
 }
 
-.padding-margin-lsbar-content{
+.padding-margin-lsbar-content {
     margin: 8px 0px;
     padding: 12px;
 }
-p{
+p {
     margin: 0;
-
 }
-.main{
+.main {
     display: flex;
     flex-direction: row;
 }
 
-.left-side-bar{
+.left-side-bar {
     position: fixed;
     display: inline-flex;
     flex-direction: column;
     padding: 8px 12px 20px;
-    border-right: 1px solid #ccc ;
+    border-right: 1px solid #ccc;
     width: 14.3%;
     flex-grow: 14.3%;
     z-index: 1;
@@ -40,46 +39,42 @@ p{
     padding: 25px 12px 16px;
 }
 
-.left-side-bar .logo img{
+.left-side-bar .logo img {
     width: 64%;
     border-radius: 15px;
 }
 
-.left-side-bar .l-side-bar-content{
+.left-side-bar .l-side-bar-content {
     display: flex;
     /* justify-content: center; */
     align-items: center;
 }
 
-.left-side-bar .l-side-bar-content:hover{
+.left-side-bar .l-side-bar-content:hover {
     background-color: rgb(249 197 197);
     border-radius: 999px;
     cursor: pointer;
 }
 
-
-.left-side-bar .l-side-bar-content p{
+.left-side-bar .l-side-bar-content p {
     margin: 0;
     padding-left: 18px;
     font-size: 16px;
 }
 
-
-.left-side-bar .l-side-bar-content i{
+.left-side-bar .l-side-bar-content i {
     font-size: 23px;
     display: flex;
     align-items: center;
 }
 
-.l-side-bar-content:last-child{
-    margin-top: 99px;
+.l-side-bar-content:last-child {
+    margin-top: 120px;
 }
-
-
 
 /* css main-content.main-content-post */
 
-.main-content{
+.main-content {
     /* margin: auto; */
     flex-grow: 6;
     display: flex;
@@ -89,13 +84,13 @@ p{
     margin-left: 254px;
 }
 
-.wrapper{
+.wrapper {
     display: flex;
     height: 1000px;
     width: 821px;
 }
 
-.main-content-post{
+.main-content-post {
     display: flex;
     flex-direction: column;
     width: 470px;
@@ -105,7 +100,7 @@ p{
     /* background-color: #ccc; */
 }
 
-.main-content-post .friends-story-wrapper{
+.main-content-post .friends-story-wrapper {
     margin-top: 16px;
     padding: 16px 0px;
     height: 85px;
@@ -113,7 +108,7 @@ p{
     border-radius: 8px;
 }
 
-.main-content-right{
+.main-content-right {
     margin-top: 26px;
     width: 319px;
     height: 500px;
@@ -122,7 +117,7 @@ p{
     background-color: #f9c5c5;
 }
 
-.friends-story-wrapper ul{
+.friends-story-wrapper ul {
     display: flex;
     flex-wrap: nowrap;
     /* align-content: stretch; */
@@ -131,12 +126,12 @@ p{
     margin: 0;
 }
 
-.friends-story-wrapper ul li{
+.friends-story-wrapper ul li {
     list-style: none;
     padding: 4px;
 }
 
-.friends-story img{
+.friends-story img {
     height: 56px;
     text-align: center;
     margin: auto;
@@ -145,14 +140,14 @@ p{
     border: 3px solid #f9c5c5;
 }
 
-.friends-story .user-name{
+.friends-story .user-name {
     font-size: 12px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.posts{
+.posts {
     display: grid;
     grid-template-columns: 1fr;
     gap: 16px;
@@ -160,7 +155,7 @@ p{
     padding-bottom: 20px;
 }
 
-.header-post{
+.header-post {
     display: flex;
     justify-content: space-between;
     align-content: center;
@@ -169,30 +164,30 @@ p{
     border-radius: 3px;
 }
 
-.post-owner{
+.post-owner {
     height: 56px;
     display: flex;
     align-content: center;
 }
 
-.post-owner .avatar{
+.post-owner .avatar {
     display: flex;
     align-content: center;
 }
 
-.post-owner .name{
+.post-owner .name {
     display: flex;
-    margin-left: 10px;  
+    margin-left: 10px;
 }
 
-.post-owner .name p{
+.post-owner .name p {
     margin: 0;
     align-self: center;
     font-size: 13px;
     font-weight: 600;
 }
 
-.post-owner .avatar img{
+.post-owner .avatar img {
     /* width: 32px; */
     max-width: 32px;
     border-radius: 50%;
@@ -200,21 +195,21 @@ p{
     align-self: center;
 }
 
-.header-post-more-icon{
+.header-post-more-icon {
     display: flex;
     align-items: center;
 }
 
-.header-post-more-icon i{
+.header-post-more-icon i {
     opacity: 0.6;
 }
 
-.post-img{
+.post-img {
     display: flex;
     justify-content: center;
 }
 
-.post-img img{
+.post-img img {
     align-self: center;
     max-width: 470px;
     max-height: 550px;
@@ -222,12 +217,12 @@ p{
     margin-bottom: -4px;
 }
 
-.post-desc{
+.post-desc {
     display: flex;
     flex-direction: column;
 }
 
-.reaction{
+.reaction {
     padding: 0 4px 6px;
     margin-top: 4px;
     display: flex;
@@ -237,47 +232,38 @@ p{
     border-radius: 2px;
 }
 
-.reaction i{
+.reaction i {
     padding: 8px;
     font-size: 22px;
 }
 
-.reaction i:last-child{
+.reaction i:last-child {
     margin-left: 308px;
 }
 
-.liked p{
+.liked p {
     padding: 0 12px;
     font-size: 14px;
     font-weight: 400;
     opacity: 0.8;
 }
 
-.status{
+.status {
     padding: 0 12px;
-
 }
 
-.status p{
+.status p {
     margin-bottom: 48px;
-
 }
 
-.status span{
+.status span {
     font-weight: 600;
     font-size: 14px;
     padding-right: 2px;
 }
 
-.date{
+.date {
     padding: 0 12px;
     font-size: 12px;
     margin-bottom: 12px;
 }
-
-
-
-
-
-
-
